--- a/index.html
+++ b/index.html
@@ -10,46 +10,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="flex-container">
-        <div class="header">
-            <h1>Заголовок</h1>
-            <div>
-                <a href="">Профиль</a>
-                <a href="">Выйти</a>
-            </div>
-        </div>
-        <div class="main">
-            <div class="menu">
-                <ul>
-                    <li>Ссылка 1</li>
-                    <li>Ссылка 2</li>
-                    <li>Ссылка 3</li>
-                    <li>Ссылка 4</li>
-                    <li>Ссылка 5</li>
-                </ul>
-            </div>
-            <div class="content">
-                <div class="top-content">
-                    <div>Ученики</div>
-                    <div>Учителя</div>
-                    <div>Родители</div>
-                    <div>Сегодня присутствуют</div>
-                </div>
-                <div class="bottom-content">
-                    <div>
-                        Календарь событий
-                    </div>
-                    <div class="bottom-content-2">
-                        <div>
-                            Доска с ДЗ
-                        </div>
-                        <div>
-                            События
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="flex">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div id="el-5">5</div>     
     </div>
 </body>
 </html>
